k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-social
  labels:
    app.kubernetes.io/name: simple-social
