k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-social
  namespace: simple-social
  labels:
    app: simple-social
spec:
  selector:
    app: simple-social
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
