k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-social
  namespace: simple-social

spec:
  rules:
    - http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-social
                port:
                  number: 80
